--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,16 +1,19 @@
 !!! 5
 html
   head
-    title This is my site
+    title Trakker
     meta(content='width=device-width, height=device-height, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0', name='viewport')
     meta(content='yes', name='apple-mobile-web-app-capable')
     meta(content='chrome=1', http-equiv='X-UA-Compatible')
     link(rel='shortcut icon', href='/images/favicon.png')
-    link(rel='stylesheet', href='/stylesheets/main.css')
+    if debug
+      link(type='text/css', rel='stylesheet', href='/stylesheets/main.css')
+    else
+      link(type='text/css', rel='stylesheet', href='/stylesheets/main-min.css')
 
   body
     #header
-      h1 My Site
+      h1 Trakker
 
     if session.email
       a(href='#', id='logout') Log out
@@ -21,4 +24,7 @@ html
     #footer
 
     script(src='https://login.persona.org/include.js', type='text/javascript')
-    script(src='/javascripts/require.js', data-main='/javascripts/config')
+    if debug
+      script(src='/javascripts/require.js', data-main='/javascripts/config')
+    else
+      script(src='/javascripts/require.js', src='/javascripts/build/trakker.js')
