--- a/public/templates/tracklist.html
+++ b/public/templates/tracklist.html
@@ -3,6 +3,7 @@
   {% for track in data.tracks %}
     <li>
       <form method="post" data-action="track-edit" data-url="/tracks/{{ track.id }}">
+        <input type="text" name="startTime" value="{{ track.startTime }}">
         <input type="text" name="title" value="{{ track.title }}">
         <input type="text" name="keywords" value="{{ track.keywords }}">
         <input type="hidden" name="tracklist_id" value="{{ track.tracklist_id }}">
