fixups to call; added more profile functionality

--- a/public/templates/profile.html
+++ b/public/templates/profile.html
@@ -1,6 +1,6 @@
 <h1>Profile</h1>
 
-<form method="post" data-action="profile" data-url="/me">
+<form method="post" data-action="profile-edit" data-url="/me">
   <h2>email: {{ data.email }}</h2>
   <img src="{{ data.gravatar }}">
   username: <input type="text" name="username" value="{{ data.username }}">
