--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header>
-      <h1>Trakker</h1>
+      <a href="/">Trakker</a>
       <div class="actions">
         {% if session.email %}
           <a href="javascript:;" data-action="logout">Sign out</a>
