--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -1,8 +1,5 @@
-dashboard
+<h1>Tracklists</h1>
 
-<a href="javascript:;" data-action="tracklist-new">Add a new tracklist</a>
-
-<h2>tracklists</h2>
 <ul>
   {% for tracklist in data %}
     <li>
