--- a/public/templates/tracklist.html
+++ b/public/templates/tracklist.html
@@ -1,9 +1,11 @@
 <h1>{{ data.title }}</h1>
 
 {% if data.authenticated and data.owner %}
-  <a href="/tracklists/{{ data.id }}/edit">edit</a>
+  <div class="form-actions">
+    <a href="/tracklists/{{ data.id }}/edit" class="link">edit</a>
+  </div>
 {% endif %}
-<ol>
+<ol class="display">
   {% for track in data.tracks %}
     <li>
       <span>{{ track.startTime }}</span>
