--- a/views/index.html
+++ b/views/index.html
@@ -35,7 +35,7 @@
     {% if debug %}
       <script src="/javascripts/require.js" data-main="/javascripts/config"></script>
     {% else %}
-      <script src="/javascripts/require.js" src="/javascripts/build/trakker.js"></script>
+      <script src="/javascripts/build/trakker.js"></script>
     {% endif %}
   </body>
 </html>
