--- a/views/index.html
+++ b/views/index.html
@@ -16,6 +16,7 @@
   <body>
     <header>
       <a href="/">Trakker</a>
+      <a href="/global">Global</a>
       {% if session.email %}
         <a href="/tracklists/new" class="link">Add a new tracklist</a>
       {% endif %}
