--- a/public/templates/tracklist.html
+++ b/public/templates/tracklist.html
@@ -1,4 +1,4 @@
-<h1>{{ data.title }}</h1>
+<h1>{{ data.artist }} - {{ data.title }}</h1>
 
 {% if data.authenticated and data.owner %}
   <div class="form-actions">
