--- a/public/templates/tracklist_edit.html
+++ b/public/templates/tracklist_edit.html
@@ -1,4 +1,4 @@
-<h1>{{ data.title }}</h1>
+<h1><a href="/tracklists/{{ data.id }}">{{ data.artist }} - {{ data.title }}</a></h1>
 
 <ol class="tracklist-edit">
   {% for track in data.tracks %}
