--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -56,6 +56,17 @@ body {
     padding: 20px;
 }
 
+.home h2 {
+    color: #777;
+    font-size: 26px;
+    line-height: 35px;
+}
+
+.home h4, .home h4 a, .home h3 {
+    font-size: 20px;
+    line-height: 30px;
+}
+
 a {
     color: #0e92ae;
     text-decoration: none;
@@ -202,4 +213,10 @@ ul.summary li {
 
 ul.summary li a {
     font-size: 16px;
+}
+
+span.keywords {
+    background-color: #fff;
+    margin-left: 10px;
+    padding: 5px 10px;
 }
