--- a/views/index.html
+++ b/views/index.html
@@ -31,6 +31,7 @@
     <div id="wrapper">
       <section></section>
     </div>
+    <div id="notification" class="hidden">test</div>
     <footer></footer>
     <script src="https://login.persona.org/include.js"></script>
     {% if debug %}
