update tracklist functionality

--- a/public/templates/tracklist_edit.html
+++ b/public/templates/tracklist_edit.html
@@ -1,5 +1,19 @@
 <h1><a href="/tracklists/{{ data.id }}">{{ data.artist }} - {{ data.title }}</a></h1>
 
+<form method="post" data-action="tracklist-edit" data-url="/tracklists/{{ data.id }}">
+  <label for="artist">
+    <span>Artist</span>
+    <input type="text" name="artist" value="{{ data.artist }}" required>
+  </label>
+  <label for="title">
+    <span>Title</span>
+    <input type="text" name="title" value="{{ data.title }}" required>
+  </label>
+  <div class="form-actions">
+    <button type="submit">Update</button>
+  </div>
+</form>
+
 <ol class="tracklist-edit">
   {% for track in data.tracks %}
     <li>
