--- a/views/index.html
+++ b/views/index.html
@@ -30,6 +30,10 @@
       </div>
     </header>
     <div id="wrapper">
+      <form method="post" class="search-form" data-action="search" data-url="/search">
+        <input type="text" name="keyword" placeholder="Search for a track" required>
+        <button type="submit">Search</button>
+      </form>
       <section></section>
     </div>
     <div id="notification" class="hidden">test</div>
