--- a/public/templates/tracklist_new.html
+++ b/public/templates/tracklist_new.html
@@ -13,6 +13,10 @@
     <span>Released</span>
     <input type="text" name="released" placeholder="yyyy-mm-dd">
   </label>
+  <label for="download">
+    <span>Download</span>
+    <input type="text" name="download">
+  </label>
   <label for="tracklist">
     <span class="track-title">Tracks</span>
     <textarea name="tracks" placeholder="Add tracks" required></textarea>
