--- a/views/index.html
+++ b/views/index.html
@@ -32,8 +32,12 @@
     <div id="wrapper">
       <section></section>
     </div>
-    <div id="notification" class="hidden">test</div>
-    <footer></footer>
+    <div id="notification" class="hidden"></div>
+    <footer>
+      <div class="content">
+        <a href="https://github.com/ednapiranha/trakkerapp">Code is available on Github</a>
+      </div>
+    </footer>
     <script src="https://login.persona.org/include.js"></script>
     {% if debug %}
       <script src="/javascripts/require.js" data-main="/javascripts/config"></script>
