--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,3 +1,7 @@
+{% include 'macros.html' %}
+
+{{ search() }}
+
 <div class="home">
   <h1>Trakker is a collection of mixes</h1>
   <h2>If you have an issue with searching in your mixes for a particular track and need to tag it with keywords or links, you've come to the right place.</h2>
